// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parse OpenAPI Spec Script Unit Tests Bundles Spec Into Single File 1`] = `
{
  ".api.json": {
    "components": {
      "schemas": {
        "ApiError": {
          "properties": {
            "errorMessage": {
              "type": "string",
            },
          },
          "required": [
            "errorMessage",
          ],
          "type": "object",
        },
        "TestRequest": {
          "properties": {
            "myInput": {
              "type": "number",
            },
          },
          "type": "object",
        },
        "TestResponse": {
          "properties": {
            "messages": {
              "items": {
                "properties": {
                  "id": {
                    "type": "integer",
                  },
                  "message": {
                    "type": "string",
                  },
                },
                "required": [
                  "id",
                ],
                "type": "object",
              },
              "type": "array",
            },
          },
          "required": [
            "messages",
          ],
          "type": "object",
        },
      },
    },
    "info": {
      "title": "Example API",
      "version": "1.0.0",
    },
    "openapi": "3.0.3",
    "paths": {
      "/operation/{pathParam}": {
        "post": {
          "operationId": "someTestOperation",
          "parameters": [
            {
              "in": "path",
              "name": "pathParam",
              "required": true,
              "schema": {
                "type": "string",
              },
            },
          ],
          "requestBody": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/TestRequest",
                },
              },
            },
            "required": true,
          },
          "responses": {
            "200": {
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/TestResponse",
                  },
                },
              },
              "description": "Successful response",
            },
            "400": {
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ApiError",
                  },
                },
              },
              "description": "Error response",
            },
          },
        },
      },
    },
  },
}
`;

exports[`Parse OpenAPI Spec Script Unit Tests Injects @async, @connectHandler and @disconnectHandler traits 1`] = `
{
  ".api.json": {
    "components": {
      "schemas": {
        "Bar": {
          "properties": {
            "blip": {
              "type": "string",
            },
          },
          "type": "object",
        },
        "Foo": {
          "properties": {
            "bar": {
              "$ref": "#/components/schemas/Bar",
            },
            "baz": {
              "format": "int32",
              "type": "integer",
            },
          },
          "type": "object",
        },
        "Node": {
          "properties": {
            "left": {
              "$ref": "#/components/schemas/Node",
            },
            "right": {
              "$ref": "#/components/schemas/Node",
            },
            "value": {
              "type": "string",
            },
          },
          "required": [
            "value",
          ],
          "type": "object",
        },
        "RecursiveRequestContent": {
          "properties": {
            "root": {
              "$ref": "#/components/schemas/Node",
            },
          },
          "type": "object",
        },
        "SendNotificationRequestContent": {
          "properties": {
            "message": {
              "type": "string",
            },
            "title": {
              "type": "string",
            },
            "topic": {
              "type": "string",
            },
          },
          "required": [
            "message",
            "title",
            "topic",
          ],
          "type": "object",
        },
        "SubscribeToNotificationsRequestContent": {
          "properties": {
            "foo": {
              "$ref": "#/components/schemas/Foo",
            },
            "topic": {
              "type": "string",
            },
          },
          "required": [
            "topic",
          ],
          "type": "object",
        },
      },
    },
    "info": {
      "description": "A sample smithy websocket api",
      "title": "MyService",
      "version": "1.0",
    },
    "openapi": "3.0.2",
    "paths": {
      "/Recursive": {
        "post": {
          "operationId": "Recursive",
          "requestBody": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/RecursiveRequestContent",
                },
              },
            },
          },
          "responses": {
            "200": {
              "description": "Recursive 200 response",
            },
          },
          "x-async": {
            "direction": "bidirectional",
          },
          "x-smithy.api#http": {
            "code": 200,
            "method": "POST",
            "uri": "/Recursive",
          },
        },
      },
      "/SendNotification": {
        "post": {
          "operationId": "SendNotification",
          "requestBody": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/SendNotificationRequestContent",
                },
              },
            },
            "required": true,
          },
          "responses": {
            "200": {
              "description": "SendNotification 200 response",
            },
          },
          "x-async": {
            "direction": "server_to_client",
          },
          "x-smithy.api#http": {
            "code": 200,
            "method": "POST",
            "uri": "/SendNotification",
          },
        },
      },
      "/SubscribeToNotifications": {
        "post": {
          "operationId": "SubscribeToNotifications",
          "requestBody": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/SubscribeToNotificationsRequestContent",
                },
              },
            },
            "required": true,
          },
          "responses": {
            "200": {
              "description": "SubscribeToNotifications 200 response",
            },
          },
          "x-async": {
            "direction": "client_to_server",
          },
          "x-smithy.api#http": {
            "code": 200,
            "method": "POST",
            "uri": "/SubscribeToNotifications",
          },
        },
      },
    },
    "x-aws.protocols#restJson1": {},
    "x-com.aws#websocketJson": {},
    "x-connect-handler": {
      "language": "typescript",
    },
    "x-disconnect-handler": {
      "language": "typescript",
    },
    "x-smithy.api#documentation": "A sample smithy websocket api",
  },
}
`;

exports[`Parse OpenAPI Spec Script Unit Tests Injects @handler and @paginated traits 1`] = `
{
  ".api.json": {
    "components": {
      "schemas": {
        "BadRequestErrorResponseContent": {
          "description": "An error at the fault of the client sending invalid input",
          "properties": {
            "message": {
              "description": "Message with details about the error",
              "type": "string",
            },
          },
          "required": [
            "message",
          ],
          "type": "object",
        },
        "InternalFailureErrorResponseContent": {
          "description": "An internal failure at the fault of the server",
          "properties": {
            "message": {
              "description": "Message with details about the error",
              "type": "string",
            },
          },
          "required": [
            "message",
          ],
          "type": "object",
        },
        "ListHellosResponseContent": {
          "properties": {
            "messages": {
              "items": {
                "type": "string",
              },
              "type": "array",
            },
            "outNextToken": {
              "type": "string",
            },
          },
          "required": [
            "messages",
          ],
          "type": "object",
        },
        "NotAuthorizedErrorResponseContent": {
          "description": "An error due to the client not being authorized to access the resource",
          "properties": {
            "message": {
              "description": "Message with details about the error",
              "type": "string",
            },
          },
          "required": [
            "message",
          ],
          "type": "object",
        },
        "NotFoundErrorResponseContent": {
          "description": "An error due to the client attempting to access a missing resource",
          "properties": {
            "message": {
              "description": "Message with details about the error",
              "type": "string",
            },
          },
          "required": [
            "message",
          ],
          "type": "object",
        },
        "SayHelloResponseContent": {
          "properties": {
            "message": {
              "type": "string",
            },
          },
          "required": [
            "message",
          ],
          "type": "object",
        },
      },
    },
    "info": {
      "description": "A sample smithy api",
      "title": "MyService",
      "version": "1.0",
    },
    "openapi": "3.0.2",
    "paths": {
      "/hello": {
        "get": {
          "operationId": "SayHello",
          "parameters": [
            {
              "in": "query",
              "name": "name",
              "required": true,
              "schema": {
                "type": "string",
              },
            },
          ],
          "responses": {
            "200": {
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/SayHelloResponseContent",
                  },
                },
              },
              "description": "SayHello 200 response",
            },
            "400": {
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/BadRequestErrorResponseContent",
                  },
                },
              },
              "description": "BadRequestError 400 response",
            },
            "403": {
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/NotAuthorizedErrorResponseContent",
                  },
                },
              },
              "description": "NotAuthorizedError 403 response",
            },
            "404": {
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/NotFoundErrorResponseContent",
                  },
                },
              },
              "description": "NotFoundError 404 response",
            },
            "500": {
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/InternalFailureErrorResponseContent",
                  },
                },
              },
              "description": "InternalFailureError 500 response",
            },
          },
          "x-handler": {
            "language": "typescript",
          },
          "x-smithy.api#http": {
            "method": "GET",
            "uri": "/hello",
          },
          "x-smithy.api#readonly": {},
        },
      },
      "/hello/{foo}": {
        "get": {
          "operationId": "ListHellos",
          "parameters": [
            {
              "in": "path",
              "name": "foo",
              "required": true,
              "schema": {
                "type": "string",
              },
            },
            {
              "in": "query",
              "name": "nextToken",
              "schema": {
                "type": "string",
              },
            },
          ],
          "responses": {
            "200": {
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ListHellosResponseContent",
                  },
                },
              },
              "description": "ListHellos 200 response",
            },
            "400": {
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/BadRequestErrorResponseContent",
                  },
                },
              },
              "description": "BadRequestError 400 response",
            },
            "403": {
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/NotAuthorizedErrorResponseContent",
                  },
                },
              },
              "description": "NotAuthorizedError 403 response",
            },
            "404": {
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/NotFoundErrorResponseContent",
                  },
                },
              },
              "description": "NotFoundError 404 response",
            },
            "500": {
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/InternalFailureErrorResponseContent",
                  },
                },
              },
              "description": "InternalFailureError 500 response",
            },
          },
          "x-paginated": {
            "inputToken": "nextToken",
            "items": "messages",
            "outputToken": "outNextToken",
          },
          "x-smithy.api#http": {
            "method": "GET",
            "uri": "/hello/{foo}",
          },
          "x-smithy.api#readonly": {},
        },
      },
    },
    "x-aws.protocols#restJson1": {},
    "x-smithy.api#documentation": "A sample smithy api",
  },
}
`;

exports[`Parse OpenAPI Spec Script Unit Tests Maps renamed @paginated traits for query and header parameters 1`] = `
{
  ".api.json": {
    "components": {
      "schemas": {
        "BadRequestErrorResponseContent": {
          "description": "An error at the fault of the client sending invalid input",
          "properties": {
            "message": {
              "description": "Message with details about the error",
              "type": "string",
            },
          },
          "required": [
            "message",
          ],
          "type": "object",
        },
        "InternalFailureErrorResponseContent": {
          "description": "An internal failure at the fault of the server",
          "properties": {
            "message": {
              "description": "Message with details about the error",
              "type": "string",
            },
          },
          "required": [
            "message",
          ],
          "type": "object",
        },
        "NotAuthorizedErrorResponseContent": {
          "description": "An error due to the client not being authorized to access the resource",
          "properties": {
            "message": {
              "description": "Message with details about the error",
              "type": "string",
            },
          },
          "required": [
            "message",
          ],
          "type": "object",
        },
        "NotFoundErrorResponseContent": {
          "description": "An error due to the client attempting to access a missing resource",
          "properties": {
            "message": {
              "description": "Message with details about the error",
              "type": "string",
            },
          },
          "required": [
            "message",
          ],
          "type": "object",
        },
        "SayHelloResponseContent": {
          "properties": {
            "messages": {
              "items": {
                "type": "string",
              },
              "type": "array",
            },
            "outToken": {
              "type": "string",
            },
          },
          "required": [
            "messages",
          ],
          "type": "object",
        },
      },
    },
    "info": {
      "description": "A sample smithy api",
      "title": "MyService",
      "version": "1.0",
    },
    "openapi": "3.0.2",
    "paths": {
      "/hello": {
        "get": {
          "operationId": "SayHello",
          "parameters": [
            {
              "in": "query",
              "name": "name",
              "required": true,
              "schema": {
                "type": "string",
              },
            },
            {
              "in": "query",
              "name": "myInToken",
              "schema": {
                "type": "string",
              },
            },
            {
              "in": "header",
              "name": "x-page-size",
              "schema": {
                "format": "int32",
                "type": "integer",
              },
            },
          ],
          "responses": {
            "200": {
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/SayHelloResponseContent",
                  },
                },
              },
              "description": "SayHello 200 response",
            },
            "400": {
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/BadRequestErrorResponseContent",
                  },
                },
              },
              "description": "BadRequestError 400 response",
            },
            "403": {
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/NotAuthorizedErrorResponseContent",
                  },
                },
              },
              "description": "NotAuthorizedError 403 response",
            },
            "404": {
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/NotFoundErrorResponseContent",
                  },
                },
              },
              "description": "NotFoundError 404 response",
            },
            "500": {
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/InternalFailureErrorResponseContent",
                  },
                },
              },
              "description": "InternalFailureError 500 response",
            },
          },
          "x-handler": {
            "language": "typescript",
          },
          "x-paginated": {
            "inputToken": "myInToken",
            "items": "messages",
            "outputToken": "outToken",
            "pageSize": "x-page-size",
          },
          "x-smithy.api#http": {
            "method": "GET",
            "uri": "/hello",
          },
          "x-smithy.api#readonly": {},
        },
      },
    },
    "x-aws.protocols#restJson1": {},
    "x-smithy.api#documentation": "A sample smithy api",
  },
}
`;

exports[`Parse OpenAPI Spec Script Unit Tests Permits parameter references (and circular references) 1`] = `
{
  ".api.json": {
    "components": {
      "parameters": {
        "HelloId": {
          "in": "query",
          "name": "id",
          "required": false,
          "schema": {
            "$ref": "#/components/schemas/HelloId",
          },
        },
      },
      "schemas": {
        "HelloId": {
          "type": "string",
        },
        "HelloResponse": {
          "properties": {
            "id": {
              "$ref": "#/components/schemas/HelloId",
            },
            "message": {
              "$ref": "#/components/schemas/HelloResponse",
            },
          },
          "required": [
            "id",
          ],
          "type": "object",
        },
      },
    },
    "info": {
      "title": "Example API",
      "version": "1.0.0",
    },
    "openapi": "3.0.3",
    "paths": {
      "/hello": {
        "get": {
          "operationId": "sayHello",
          "parameters": [
            {
              "$ref": "#/components/parameters/HelloId",
            },
          ],
          "responses": {
            "200": {
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/HelloResponse",
                  },
                },
              },
              "description": "Successful response",
            },
          },
          "x-handler": {
            "language": "typescript",
          },
        },
      },
    },
  },
}
`;
